--- a/aula 2/imganimation/style.css
+++ b/aula 2/imganimation/style.css
@@ -71,6 +71,7 @@ body {
 
 .box::after{
     content: attr(data-text);
+    text-align: center;
     position: absolute;
     bottom: 20px;
     background: #000;
